Reduces global path dependency and uses 3D local Pointcloud for RANSAC line fitting (#357)
* chore : Improvements
- Reduce global path dependency
- Use Local 3D point cloud for RANSAC line fitting.

* chore : added obstacle detection on auto_nav

- added parameters to enable or disable obstacle detection
- added params to reset costmap

* chore : costmap clearing and updating working fine

* chore : Fine tuned centerline collision detection

* chore : Tuned values for lidar obstacle detector and other parameters in auto_nav
- #353-auto-nav-improvements1

* chore : modified launch file

* chore : mistake in param file

* bug : changed tuple

* chore : added param to use costmap for dwa planner
- clean code
- defaults to not to use costmap for collsion checking

- #353

* chore : added centering default

* chore : insync with master

--- a/auto_nav/params/autonav_params_cpp.yaml
+++ b/auto_nav/params/autonav_params_cpp.yaml
@@ -5,10 +5,12 @@ pub_debug_topics : true
 use_previous_line : false 
 end_point_reach_th : 3
 local_traj_length : 8
-
+use_global_path_for_ransac : false # whehter to use global path to clasify left and right clouds.
+enable_center_line_collision_checking : false
+reset_costmap_once : false
 orchard_details:
-  row_spacing : 6.2
-  tree_width : 2.3
+  row_spacing : 9
+  tree_width : 2.7
   tree_width_tolerance : 0.3
 
 turnings:
@@ -20,12 +22,12 @@ ransac:
   max_iterations : 50
 
 dwa:
-  enable : true
+  use_costmap : false
   wheel_base : 2.5
   constant_speed : 1
   steering_agle_lim : 30
-  steering_angle_increment : 1
+  steering_angle_increment : 3
   path_len : 6
-  path_resolution : 0.1
+  path_resolution : 0.3
 
 
