--- a/auto_nav/params/cloud_to_laser_180_params.yaml
+++ b/auto_nav/params/cloud_to_laser_180_params.yaml
@@ -1,5 +1,5 @@
 #target_frame : rslidar
-min_height  : -0.2 # any object above 0.3 from ground
+min_height  : 0.0 # any object above 0.3 from ground
 max_height  : 1.5 # vehicle width is assumed to be 1.5
 angle_min   : -1.5707963267948966
 angle_max   : 1.5707963267948966
@@ -8,4 +8,4 @@ scan_time : 0.3333
 range_min : 0.2
 range_max : 30
 concurrency_level : 1
-use_inf : false
+use_inf : true
