feat : added mapper to save path (#391)
* feat : added mapper to save path
- #390

* chore : removed mapper_node topics from bag file
- #390

* chore: added mapper as a submodule
- #390

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sensor_drivers"]
 	path = sensor_drivers_new
 	url = https://github.com/bosonrobotics/sensor_drivers.git
+[submodule "mapping"]
+	path = mapping
+	url = https://github.com/bosonrobotics/mapping
