fix: to interpolate end points with distance_thr and orientation check_condition (#400)
* fix: to interpolate end points with distance_thr and orientation
-#399

--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -1,4 +1,5 @@
-path_publisher:
+path_publisher: 
+  mission_continue_dist_thr : 4 #distance thr between 1st and last waypoint to mission continue
   opposite_path_forward_motion : True #reverse the path in vehicle forward motion - mission_continue to be false to enable it(req: fish tail save_path)
   opposite_closest_pt_dis_Thr : 1 #in mtr, distance btw last pts and any point in a path
   max_dis_btw_points : 0.5 # meters
