367 halt and continue (#419)
* feat:Basic halt and continue added

--- a/autopilot/package.xml
+++ b/autopilot/package.xml
@@ -68,6 +68,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>python3-fastkml</exec_depend>
+  <exec_depend>python3-geographiclib</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
