--- a/autopilot/package.xml
+++ b/autopilot/package.xml
@@ -69,6 +69,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>python3-fastkml</exec_depend>
   <exec_depend>python3-geographiclib</exec_depend>
+  <exec_depend>python3-json-stream-pip</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
