--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -4,6 +4,7 @@ path_publisher:
   opposite_closest_pt_dis_Thr : 1 #in mtr, distance btw last pts and any point in a path
   max_dis_btw_points : 0.5 # meters
   distance_to_slowdown_on_ends : 3
+  distance_to_slowstart_on_start : 3
   minimum_json_length : 100
   path_resolution : 0.1 # 10 cms
   interpolate_without_rtk : False # True-to interpolate points even though the rtk is lost
