C++ Version of Obstacle Detection (#473)
* fix: Copied files from 347 branch to this branch

* fix: Updated files from the master

* fix: changed the node name from python to cpp

* fix: Added itops details

* fix: pure pursuit code to take the local_gps traj as default

* feat: Auto formatting done through clang

* fix:Global trajectory repetition on error HMI fixed

* added exception to show the error

* fix: Zed camera based OSP

* Revert "fix: Zed camera based OSP"

This reverts commit 9d749a258b4174f6a6ed185a725f97eac53e3bed.

* fix: Updated the code to be in sync with master

* feat: updated the code to find obstacle in v1 then v2 and so on zed also fixed

* fix: updated comments

* fix: small change in bypass feature

* fix: RLC and main loop obs will work improved diagnostics

* fix: updated the default bbox topic

* fix: Added parameter of use_sim_time

* fix: updated the default radial offset value to 0.1

* fix: changed the odom time calc from ros to chrono

* fix: kept parameter in launch file to chose which OSP to use and kept v2 default to false

* fix: handle mission_continue:true and end to start interpolation failed (#421)

* fix: handle mission_continue:true and end to start interpolation failed
-#420

* fix: turn-ind with trajec_index
-#420

* fix: to publish error when mission continue is false and reached end of path
-#420

* fix: to finalise mission_continue as /mission_continue default
-#420

* feat : check added for connected save path
- #420

* fix: keep the old parameters
-#420

* fix: array syntax fix
-#420

* fix: log according to connected save path
-#420

* fix: to replace all the other at master
-#420

* fix: get the mission continue fix from obs
-#420

* fix: mission completed at robot reached end
-#420

---------

Co-authored-by: RamanaBotta <ramanab@bosonmotors.com>

* fix: to fix the lhd check with respect to close point accumulated distance
-#471



--- a/autopilot_utils/CMakeLists.txt
+++ b/autopilot_utils/CMakeLists.txt
@@ -2,13 +2,12 @@ cmake_minimum_required(VERSION 3.0.2)
 project(autopilot_utils)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
+find_package(catkin REQUIRED COMPONENTS 
   autopilot_msgs
+  vehicle_common
   costmap_2d
   geometry_msgs
   map_msgs
@@ -20,20 +19,25 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_geometry_msgs
   tf2_ros
   tf2_sensor_msgs
+  jsk_recognition_msgs
+  zed_interfaces
 )
 
+# Python setup (if you have Python scripts)
 catkin_python_setup()
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS roscpp
-#  DEPENDS other non-ROS libs
 )
+
 include_directories(
   include
+  ${CMAKE_CURRENT_SOURCE_DIR}  # Include the current source directory
   ${catkin_INCLUDE_DIRS}
 )
+
 add_library(${PROJECT_NAME}
   src/trajectory_common.cpp
   src/tf_utils.cpp
@@ -42,14 +46,18 @@ add_library(${PROJECT_NAME}
   src/autonav_utils.cpp
   src/dubins.cpp
   src/dwa_path_ganerator.cpp
+  src/footprint_transform.cpp
 )
+
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+
 install(
   TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
 install(
   DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
