--- a/vehicle_common/CMakeLists.txt
+++ b/vehicle_common/CMakeLists.txt
@@ -8,14 +8,34 @@ project(vehicle_common)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
   rospy
 )
 
 catkin_python_setup()
-
-catkin_package()
-
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS roscpp
+)
 include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
+include
+${catkin_INCLUDE_DIRS}
+)
+
+add_library(${PROJECT_NAME}
+  src/config_vehicle.cpp
+)
+
+
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+install(
+  TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
+install(
+  DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
