--- a/autopilot_utils/package.xml
+++ b/autopilot_utils/package.xml
@@ -52,6 +52,7 @@
   <build_depend>autopilot_msgs</build_depend>
   <build_depend>costmap_2d</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>jsk_recognition_msgs</build_depend>
   <build_depend>map_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
@@ -61,9 +62,12 @@
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_sensor_msgs</build_depend>
+  <build_depend>zed_interfaces</build_depend>
+
   <build_export_depend>autopilot_msgs</build_export_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>jsk_recognition_msgs</build_export_depend>
   <build_export_depend>map_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -73,9 +77,12 @@
   <build_export_depend>tf2_geometry_msgs</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
   <build_export_depend>tf2_sensor_msgs</build_export_depend>
+  <build_export_depend>zed_interfaces</build_export_depend>
+
   <exec_depend>autopilot_msgs</exec_depend>
   <exec_depend>costmap_2d</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>jsk_recognition_msgs</exec_depend>
   <exec_depend>map_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -85,6 +92,8 @@
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_sensor_msgs</exec_depend>
+  <exec_depend>zed_interfaces</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
