chore : disabled mapping by default - enabled savepath v2 by default - standalone gps minor bug fix - enabled steering based collision check default

--- a/collision_monitor/params/collision_monitor_params.yaml
+++ b/collision_monitor/params/collision_monitor_params.yaml
@@ -5,7 +5,7 @@ collision_monitor:
   min_points: 5 # Minimum points inside the polygon to not consider as collision.
   points : [[-0.8, 1], [-0.8, -1],[4.45, -1], [4.45, 1]] # Foot_print points representing the vehicle wrt base_link
           #  [[-0.8, 1], [-0.8, -1],[4.45, -1], [4.45, 1]] # vehicle lenght 2.
-  steering_angle_based_collision_check: False # check collision with respect to steering angles
+  steering_angle_based_collision_check: True # check collision with respect to steering angles
   observation_sources: [ "rslidar_scan"] # ["zed_scan"]
   rslidar_scan:
     type: "scan"
